@startuml
class Creature {
    + Health : int <<get>> <<set>>
    + Shield : int <<get>> <<set>>
    + Name : string <<get>> <<set>>
    + Creature(name:string)
    + GetInfo() : string
}
class Knight {
    - Weapon : string <<get>> <<set>>
    + Knight(n:string, weapon:string)
    + Attack() : void
}
class Dragon {
    - Color : string <<get>> <<set>>
    + Dragon(n:string, color:string)
    + Attack() : void
}
Creature <|-- Knight
Creature <|-- Dragon
class Program {
    {static} Main(args:string[]) : void
}
@enduml
